# python-lib

./: .buildinfo  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  README.rst  api.html  bash-env.sh  bootstrap-docker.py  conftest.py  contributing.html  dml_script  entrypoint.py  genindex.html  hatch.toml  howto.html  index.html  lambda_entrypoint.py  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.cfg  tmp.output.json
.doctrees/: api.doctree  contributing.doctree  environment.pickle  howto.doctree  index.doctree
.github/workflows/: ci.yml  deploy-docs.yml
_modules/: index.html
_modules/daggerml/: core.html
_sources/: api.rst  howto.rst  index.rst
daggerml/: __init__.py  _types.py  exceptions.py  local-dir-hash.sh  util.py
docs/: README.md  api.rst  conf.py  index.rst  tutorials.rst
docs/examples/: daggerml-basics.py  generate-data-0.py  generate-data-1.py  intro.py  trees.py
docs/examples/generate-data/: Dockerfile  main.py
docs/examples/trees/: Dockerfile  main.py
docs/source/: conf.py  contributing.rst
examples/: .hello-load.py.swp  .naive-bayes.py.swp  docker-build-dag.py  generate-data.py  hello-load.py  helloworld.py  naive-bayes.py  test1.py  trees.py
examples/generate-data/: Dockerfile  main.py
examples/trees/: main.py
lambda/: batch.yml  install.py  run_batch_job.py
src/daggerml/: __init__.py  __init__.pyi  __main__.py  _cli.py  _clink.py  _config.py  _dag.py  api.py  cli.py  core.py  dag.py  executor.py  helper.py  util.py
src/daggerml/contrib/: __init__.py  dkr.py  ingest.py  local.py  process.py  s3.py  script_exec.py  util.py
src/daggerml/contrib/extras/: local-dir-hash.sh
src/daggerml/executor/: .__init__.py.swp  __init__.py  __main__.py  aws.py  ec2.cfn.yml  lambda_.py  local_process.py  s3.py
tests/: Dockerfile  _test_executor.py  _test_misc.py  conftest.py  contrib_helpers.py  example_optimization.py  test_basic.py  test_contrib.py  test_core.py  test_dag.py  test_executor.py  test_lambda.py  test_misc.py  test_s3.py  util.py
tests/assets/: Dockerfile  mnist_jax.py
tests/assets/dkr-context/: Dockerfile
tests/assets/fns/: async.py  envvars.py  error.py  minimal_viable_fn.py  sum.py
tests/assets/mnist-dkr/: Dockerfile
tests/batch_executor/: __init__.py  batch.yml  lambda_entrypoint.py  run_batch_job.py
tests/batch_executor/lambda/: add_one.py  entrypoint.py
tests/executor/: test_local_process.py
