[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"

[project]
name = "daggerml"
version = "0.0.15"
authors = [
  { name="DaggerML", email="engineering@daggerml.com" }
]
description = "DaggerML"
readme = "README.md"
#license = "MIT"
requires-python = ">=3.6"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "dataclasses; python_version < '3.7'",
  "importlib_metadata; python_version < '3.8'",
]

[project.optional-dependencies]
aws = ["boto3"]
ssh = ["paramiko"]
cli = ["daggerml_cli"]
all = ["daggerml[aws,ssh]"]

[project.entry-points."daggerml_cli.executor"]
py = "daggerml.executor.PyExecutor"
conda = "daggerml.executor.CondaPyExecutor"
hatch = "daggerml.executor.HatchPyExecutor"

[project.entry-points."daggerml_cli.compute_env"]
local = "daggerml.executor.Local"
ssh = "daggerml.executor.RemoteSsh"

[project.urls]
Homepage = "https://daggerml.com"
Documentation = "https://daggerml.com/docs"
Issues = "https://github.com/daggerml/python-lib/issues"

[tool.pytest.ini_options]
pythonpath = "tests/"
minversion = "6.0"
addopts = "-ra --ignore=submodules/"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]

[tool.hatch.build.targets.wheel]
packages = ["src/daggerml"]

[tool.hatch.envs.default]
python="3.10"
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.test-jax]
dependencies = [
  "jax-metal==0.0.7",
  "jaxlib==0.4.26",
  "jax==0.4.26",
  "flax",
  "optax",
  "numpy",
  "tensorflow-datasets",
  "tensorflow",
  "ml-collections",
  "scipy==1.10.1",
  "tqdm",
]

[tool.hatch.envs.test-pandas]
dependencies = [
  "pandas==2.0.1",
  "scikit-learn==1.4",
]

[tool.hatch.envs.test-nevergrad]
dependencies = [
  "nevergrad==1.0.2",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-cov",
  "pandas==2.0.1",
]

[tool.hatch.envs.test.scripts]
test = 'pytest -vsx --log-cli-level=INFO --log-disable=botocore.credentials'

[tool.ruff]
line-length = 120
select = ["E", "F", "B", "I", "PGH004"]
ignore = []
unfixable = ["B"]

[tool.ruff.isort]
known-first-party = ["daggerml"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.pyright]
typeCheckingMode = "basic"
reportOptionalMemberAccess = false
reportOptionalCall = false
